for @media responsive: changed body width to adapt size | added some left/right white space | changed .topnav.responsive left margin in line 963 for better position | changed dropdown bar menu background (line 973) | changed header height to adapt when menu drops down | hided social media (line994) | changed hero-grid to block | changed banner-text positinon to center and appearence | changed home-main-grid to block | adapted newborn-img-box and newborn-banner-image size and position | changed footer to block | fixed .copyright position | updated comments

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,10 +35,11 @@
 }
 
 body {
-  width: 100%;
+  width: 99.5%;
   background-color: var(--accent2-color);
   font-size: 20px;
-  margin: 0 0;
+  margin-left: 0.3%;
+  margin-right: 0.5%;
 }
 
 h1, h2, h4, h5, h6{
@@ -936,7 +937,7 @@ img {
     /*margin-left: 20px;*/
   }
 
-  /* ----------- MEDIA QUERY ------------*/
+/* ----------- MEDIA QUERY ------------*/
   
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
   @media screen and (max-width: 600px) {
@@ -946,51 +947,93 @@ img {
       display: block;
     }
 
-    /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-    @media screen and (max-width: 600px) {
-      .topnav.responsive {position: relative;}
-      .topnav.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-
-      .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-       }
-
-       .topnav, #home-header-grid {
-        height: auto;
-        display: block;
-       }
-
-       .topnav {
-        margin-left: 100px;
-       }
-
-       .socialmediaicons {
-        display: none;
-       }
-       
+  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
     }
 
-  
-   /* img {
-    width: auto;
-   }
-
-    #home-header-grid, nav{
+    /*dropdown menu bar responsive behavior*/
+    .topnav.responsive a {
+      float: none;
       display: block;
-      height: auto;
-      background-color: green;
+      margin-left: -15%;
     }
 
-    nav a {
-      display: block;
-      width: auto;
-      height: auto;
-    } */
+    /*removes hover color*/
+    .topnav a:hover {
+      background-color:initial;
+    }
 
+    /*push nav to right*/
+    .topnav {
+      margin-left: 45%;
+    }
+
+    body {
+      width: 99.5%;
+      margin-left: 0.3%;
+      margin-right: 0.5%;
+    }
+
+    /*allows nav items to dropdown as block*/
+    .topnav, #home-header-grid, #hero-grid {
+      height: auto;
+      display: block;
+    }
+
+    /*increase header height when dropdown menu is active*/
+    header {
+      height: auto;
+    }
+
+    /*hides social media elements*/
+    .socialmediaicons {
+      display: none;
+    }
+
+    /*replace grid by block*/
+    .hero-grid {
+      display: block;
+      margin-bottom: 10%;
+    }
+
+    /*position and appearence of the text*/
+    .banner-text {
+      position: relative;
+      margin-left: auto;
+      margin-bottom: 5%;
+      color: var(--headline-color-on-white);
+    }
+
+    /*changing home main grid to block*/
+    .home-main-grid {
+      display: block;
+      margin-top: 10%;
+      margin-bottom: 10%;
+    }
+
+    .newborn-img-box {
+      width: 80%;
+      margin: 0 auto;
+      margin-top: 5%;
+    }
+
+    #newborn-banner-image {
+      margin-left: auto;
+      margin-top: auto;
+    }
+
+    #footer-box {
+      display: block;
+    }
+
+    /*sets to its original position*/
+    .copyright {
+      position:initial;
+    }
   }
+}
